# advent_of_code_2024

./: .gitignore  Cargo.toml  Makefile  README.md  template.bench.rs  template.main.rs  template.rs
day-1/: Cargo.toml
day-1/src/: main.rs
day-10/: Cargo.toml
day-10/benches/: bench.rs
day-10/src/: lib.rs  main.rs
day-11/: Cargo.toml
day-11/benches/: bench.rs
day-11/src/: lib.rs  main.rs
day-12/: Cargo.toml
day-12/benches/: bench.rs
day-12/src/: lib.rs  main.rs
day-13/: Cargo.toml
day-13/benches/: bench.rs
day-13/src/: lib.rs  main.rs
day-14/: Cargo.toml
day-14/benches/: bench.rs
day-14/src/: lib.rs  main.rs  object_zoo.rs  parse.rs  part2.rs
day-15/: Cargo.toml
day-15/benches/: bench.rs
day-15/src/: lib.rs  main.rs
day-16/: Cargo.toml
day-16/benches/: bench.rs
day-16/src/: lib.rs  main.rs
day-17/: Cargo.toml
day-17/benches/: bench.rs
day-17/src/: lib.rs  main.rs
day-18/: Cargo.toml
day-18/benches/: bench.rs
day-18/src/: lib.rs  main.rs
day-19/: Cargo.toml
day-19/benches/: bench.rs
day-19/src/: lib.rs  main.rs
day-2/: Cargo.toml
day-2/src/: main.rs
day-20/: Cargo.toml
day-20/benches/: bench.rs
day-20/src/: lib.rs  main.rs
day-21/: Cargo.toml
day-21/src/: lib.rs  (+3 more)
day-22/: Cargo.toml
day-23/: Cargo.toml
day-24/: Cargo.toml
day-25/: Cargo.toml
day-3/: Cargo.toml
day-4/: Cargo.toml
day-5/: Cargo.toml
day-6/: Cargo.toml
day-7/: Cargo.toml
day-8/: Cargo.toml
day-8/benches/: bench.rs
day-8/src/: lib.rs  main.rs  point.rs
day-9/: Cargo.toml
template/: Cargo.toml  lib.rs  main.rs
(+28 files in other folders)
