[package]
name = "day-15"
version = "0.1.0"
edition = "2021"

[dependencies]
game-grid = "^0.1"
linked_hash_set = "^0.1"

[dev-dependencies]
divan = "^0.1"
mry = "^0.10"
gag = "^1.0"

[features]
sample = ["debug"]
part2 = []
full_bench = []
debug = []

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false