[package]
name = "day-20"
version = "0.1.0"
edition = "2021"

[dependencies]
game-grid = "^0.1"
itertools = "^0.13"
pathfinding = "^4.12"

[dev-dependencies]
divan = "^0.1"
mry = "^0.10"
gag = "^1.0"

[features]
default = ["debug"]
part2 = []
debug = []
full_bench = []

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false