[package]
name = "day-8"
version = "0.1.0"
edition = "2021"

[dependencies]
game-grid ="^0.1.3"
itertools = "^0.13"
num = "0.4"

[dev-dependencies]
divan = "^0.1"
mry = "^0.10"
gag = "^1.0"

[features]
sample = []
part2 = []
full_bench = []

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false